# vers_user_skills

./: .gitignore  QUICKREF.md  README.md  vers_ops_twenty_personas_v1_20260417T1811NYC_9bfacce013ef.md
examples/: README.md  quickstart.sh  swarm_harness.py  workflow_example.json
remoted_tasks_on_vers/: SKILL.md
scripts/: reef_ops.py  reef_standup.py  vers_api.py  vers_stack.py
skills/offload-to-vers/: SKILL.md
skills/onboard-to-vers/: SKILL.md
skills/use-vers-for-everything/: CHANGELOG.md  README-draft.md  README.md  SKILL-draft.md  SKILL.md  api-cheatsheet-draft.md  api-cheatsheet.md  api-reference.md  onboarding.md  patterns.md  vers_api.py
skills/use-vers-for-everything/scripts/: curl_recipes.sh  pyproject.toml  smoke_test.py  vers_api.py
skills/vers-api-reference/: SKILL.md
skills/vers-stack-runtime/: SKILL.md
skills/vers-stack-standup/: SKILL.md
tests/: vers_skills_eval_prompts.md
use-vers-for-everything/: CHANGELOG.md  MANIFEST.sha3-256.txt  README.md  SKILL.md  api-cheatsheet.md  patterns.md
use-vers-for-everything/references/: error_shapes.md
use-vers-for-everything/scripts/: curl_recipes.sh  smoke_test.py  vers.py
vers-unified-skills/: README.md
vers-unified-skills/scripts/: lt.py  pi_vers_ops.py  vers_api.py  vers_fleet.py
vers-unified-skills/skills/vers-api-reference/: SKILL.md
vers-unified-skills/skills/vers-stack-bootstrap/: SKILL.md
vers-unified-skills/skills/vers-stack-dev/: SKILL.md
